# rust-react-chat

./: .gitignore  README.md  asset-manifest.json  index.html  package-lock.json  package.json
client/: README.md  package-lock.json  package.json
client/public/: index.html
client/src/: App.scss  App.tsx  index.scss  index.tsx  setupTests.ts
server/: Cargo.toml  README.md
server/src/: main.rs
static/css/: main.074a91e0.chunk.css  main.074a91e0.chunk.css.map  main.48d5cd03.chunk.css  main.48d5cd03.chunk.css.map  main.6886e836.chunk.css  main.6886e836.chunk.css.map
static/js/: 2.1e3854bf.chunk.js  2.1e3854bf.chunk.js.map  2.282bb005.chunk.js  2.282bb005.chunk.js.map  2.855cbd93.chunk.js  2.855cbd93.chunk.js.map  2.b20047cc.chunk.js  2.b20047cc.chunk.js.map  2.fc60262c.chunk.js  2.fc60262c.chunk.js.map  3.2652266a.chunk.js  3.2652266a.chunk.js.map  3.36922820.chunk.js  3.36922820.chunk.js.map  3.39190c3f.chunk.js  3.39190c3f.chunk.js.map  3.39dd73b8.chunk.js  3.39dd73b8.chunk.js.map  main.108a2c77.chunk.js  main.108a2c77.chunk.js.map  main.139b3f28.chunk.js  main.139b3f28.chunk.js.map  main.16e4217b.chunk.js  main.16e4217b.chunk.js.map  main.26d99448.chunk.js  main.26d99448.chunk.js.map  main.2a1b5078.chunk.js  main.2a1b5078.chunk.js.map  main.2d09620f.chunk.js  main.2d09620f.chunk.js.map  main.43d25cc6.chunk.js  main.43d25cc6.chunk.js.map  main.47359f72.chunk.js  main.47359f72.chunk.js.map  main.6325c32c.chunk.js  main.6325c32c.chunk.js.map  main.75ce2fa8.chunk.js  main.75ce2fa8.chunk.js.map  main.a9566dd9.chunk.js  main.a9566dd9.chunk.js.map  (+12 more)
(+31 files in other folders)
